name:                sylvan-haskell
version:             0.1.0.0
synopsis:            Bindings to the Sylvan Parallel BDD library
description:         See http://fmt.ewi.utwente.nl/tools/sylvan/
license:             BSD3
license-file:        LICENSE
author:              Adam Walker
maintainer:          adamwalker10@gmail.com
copyright:           2014 Adam Walker
category:            Data
build-type:          Simple
cabal-version:       >=1.10
homepage:            http://fmt.ewi.utwente.nl/tools/sylvan/

library
  exposed-modules:     Sylvan
  ghc-options:         -Wall
  build-depends:       base >=4.7 && <5, primitive >=0.5 && <0.7
  default-language:    Haskell2010
  c-sources:           stubs.c
  extra-libraries:     sylvan, pthread, hwloc

source-repository head
  type:     git
  location: https://github.com/adamwalker/sylvan-haskell.git
